--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ body{
 	font-family: 'Open Sans', sans-serif;
 /*	font-family: 'Dosis', sans-serif;*/
 }
+h1{
+	font-size: 60px;
+}
 ul li{
 	display: inline-block;
 	padding-right: 10px;
@@ -28,6 +31,13 @@ h1{
 	height: 50px;
 	border-radius: 50px;
 }
+.red-mor2{
+	background-color: gray;
+	width: 60px;
+	height: 30px;
+	border-radius: 50px;
+	margin-left: 80px;
+}
 .mt-5{
 	margin-top: 5%;
 }
@@ -48,7 +58,7 @@ hr{
 	padding-top: 40px;
 }
 .pink{
-	color: pink;
+	color: #FF0080;
 
 }
 .bor-rad{
@@ -82,5 +92,31 @@ hr{
 }
 
 .footer-p{
+	font-size: 13px;
+}
+.footer-pp{
 	font-size: 10px;
+}
+#tel{
+	font-size: 30px;
+	color: 
+}
+input{
+	width: 300px;
+	height: 40px;
+	background-color:#424242;
+	border-style: none;
+	padding-left: 10px;
+}
+
+ul li a i{
+	width: 35px;
+	height: 35px;
+	border-radius: 100%;
+	border: 1px dashed gray;
+	padding:8px;
+}
+
+.pt-1{
+	padding-top: 1%;
 }
